SPRING FRAMEWORK CHANGELOG
==========================
$Id: changelog.txt,v 1.182 2004-07-09 17:39:01 jhoeller Exp $


Changes in version 1.1 RC1 (19.7.2004)
--------------------------------------

Package org.springframework.aop
* fixed debug log statements to avoid invocation of "toString" method on target (not supported e.g. by Axis proxy)

Package org.springframework.beans
* BeanUtils' "instantiateClass" methods try to set the constructors accessible if given non-accessible constructors
* factored out PropertyAccessor base interface from BeanWrapper
* BeanWrapperImpl supports dots in keys, for example "map[my.key]"
* BeanWrapperImpl's "isReadableProperty" and "isWritableProperty" properly check indexed/mapped properties
* refined BeanWrapperImpl to apply a custom editor strictly either to an array/Collection or to each of their elements
* refined BeanWrapperImpl to automatically convert a value to an array with a single component when necessary
* refined BeanWrapperImpl to support converting any Collection into an array rather than just a List
* fixed PropertiesEditor's support for converting a Map to Properties
* added ArgumentConvertingMethodInvoker subclass of MethodInvoker, converting given arguments via BeanWrapperImpl
* MethodInvokingFactoryBean derives from ArgumentConvertingMethodInvoker to inherit argument conversion
* fixed MethodInvokingFactoryBean's singleton initialization to properly allow for circular reference detection
* fixed PropertyPlaceholderConfigurer's circular reference detection to allow repeated placeholder in single value
* fixed PropertyPlaceholderConfigurer's parsing to detect all inner bean definitions (including BeanDefinitionHolder)
* PropertyPlaceholderConfigurer detects and parses placeholders in map keys, rather than just in map values
* PropertyPlaceholderConfigurer and PropertiesFactoryBean respect the defaults of a given Properties instance